# AutoDos-v2

./: .gitignore  CMakeLists.txt  README.md  app_config.json  vcpkg.json
.github/workflows/: ci.yml
__cmake_systeminformation/: CMakeCache.txt
src/: app.cpp  app.h  artfetcher.cpp  artfetcher.h  autodos2.rc  gamedb.cpp  gamedb.h  ingest.cpp  ingest.h  main.cpp  platform.cpp  platform.h  settings.cpp  settings.h  test_db.cpp
